# cv

./: pyproject.toml
notebooks/: check.ipynb
tests/: test_metrics.py
