[tool.poetry]
name = "cv-toolkit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "1.23.4"
opencv-python = "4.7.0.72"
requests = "2.28.1"
scikit-image = "0.19.3"
scipy = "1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
